# cu-tracer

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  RAY_TRACER_ARCHITECTURE.md
.cache/clangd/index/: camera.hu.7F0404681A465B00.idx  common.hu.0E08D5018C414DB9.idx  cuda_test.cu.7F6D7B9A7601EC96.idx  framebuffer.hu.1809AF90B2903343.idx  hit.hu.7B502B720B374333.idx  main.cu.32905311CC471C0D.idx  managed.hu.D3557F833E3894F7.idx  material.hu.136F2DE39B48C932.idx  math.cu.7C2CEA72974C48BE.idx  math.hu.7EB4AC3194115F6E.idx  opengl_renderer.cu.2B648B43DE5CC646.idx  opengl_renderer.hu.DFE712FE632A49B1.idx  ray.hu.A8C57D7306076449.idx  renderer.cu.20E948D29826A62D.idx  renderer.hu.55061CB3AA778A96.idx  sphere.hu.71C0D75D4AEE964F.idx  window.cpp.5BE3B85428B8D146.idx  window.cu.F6E4C31917D000C1.idx  window.h.2979250596ADC8C2.idx  window.hu.C4BB177B40F625F2.idx
include/: camera.cuh  camera.hu  common.hu  framebuffer.cuh  framebuffer.hu  hit.cuh  hit.hu  managed.cuh  managed.hu  material.cuh  material.hu  math.cuh  math.hu  object.cuh  ray.cuh  ray.hu  renderer.cuh  renderer.hu  scene.cuh  sphere.hu  window.cuh  window.hu
include/importers/: obj.h
include/kernels/: path_tracing.cuh  trace_attribute.cuh
src/: camera.cu  framebuffer.cu  main.cu  material.cu  object.cu  renderer.cu  scene.cu  test.cu.bak  window.cu
src/importers/: obj.cpp
src/kernels/: path_tracing.cu  trace_attribute.cu
